# ved

./: .dockerignore  Dockerfile  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: docker-publish.yml  tests.yml
src/ved/: __init__.py  __main__.py  utils.py
src/ved/video/: __init__.py  entropy.py  preprocess.py  utils.py
src/ved/web/: scrape.py
tests/: __init__.py  conftest.py  test_fixtures.py  test_main.py  types.py
